--- a/NoteDemo/app/src/main/res/values/dimens.xml
+++ b/NoteDemo/app/src/main/res/values/dimens.xml
@@ -19,4 +19,6 @@
     <dimen name="preview_popwindow_item_marginleft">18dp</dimen>
     <dimen name="preview_popwindow_item_radius">6dp</dimen>
     <dimen name="preview_left_menu_width">400dp</dimen>
+    <dimen name="preview_left_item_height">60dp</dimen>
+    <dimen name="preview_left_item_margin_left">20dp</dimen>
 </resources>
