--- a/NoteDemo/app/src/main/res/layout/preview_words_item_layout.xml
+++ b/NoteDemo/app/src/main/res/layout/preview_words_item_layout.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/preview_left_item_height"
     android:background="@android:color/white"
     android:orientation="horizontal"
-    android:layout_marginLeft="@dimen/preview_left_item_margin_left"
+    android:paddingLeft="@dimen/preview_left_item_text_padding_left"
     android:id="@+id/query_container"
     >
     <ImageView
         android:id="@+id/preview_word_img"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:src="@drawable/pizhu_tag"/>
     <TextView
         android:id="@+id/preview_word_item_txt"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_toRightOf="@+id/preview_word_img"
         android:gravity="center"
-        android:textSize="15sp" />
-</LinearLayout>
+        android:paddingLeft="@dimen/preview_left_item_text_padding_left"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
+</RelativeLayout>
