--- a/NoteDemo/app/src/main/res/layout/preview_words_item_layout.xml
+++ b/NoteDemo/app/src/main/res/layout/preview_words_item_layout.xml
@@ -1,27 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.ruaho.note.view.SwipeItemLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/preview_left_item_height"
     android:background="@android:color/white"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/preview_left_item_text_padding_left"
-    android:id="@+id/query_container"
-    >
-    <ImageView
-        android:id="@+id/preview_word_img"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/pizhu_tag"/>
-    <TextView
-        android:id="@+id/preview_word_item_txt"
+    android:id="@+id/query_container">
+    <RelativeLayout
+        android:id="@+id/preview_item_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/preview_word_img"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/pizhu_tag"/>
+        <TextView
+            android:id="@+id/preview_word_item_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/preview_word_img"
+            android:gravity="center"
+            android:paddingLeft="@dimen/preview_left_item_text_padding_left"
+            android:textSize="20sp"
+            android:textColor="@color/black"/>
+    </RelativeLayout>
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_toRightOf="@+id/preview_word_img"
-        android:gravity="center"
-        android:paddingLeft="@dimen/preview_left_item_text_padding_left"
-        android:textSize="20sp"
-        android:textColor="@color/black"/>
-</RelativeLayout>
+        android:background="@color/black">
+        <TextView
+            android:id="@+id/mark"
+            android:text="编辑"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:layout_width="80dp"
+            android:gravity="center"
+            android:background="@color/preview_bottom_gray"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/delete"
+            android:text="删除"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@color/red"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+</com.ruaho.note.view.SwipeItemLayout>
