--- a/NoteDemo/app/src/main/res/drawable/preview_circle.xml
+++ b/NoteDemo/app/src/main/res/drawable/preview_circle.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android= "http://schemas.android.com/apk/res/android"
     android:shape= "oval">
-    <solid android:color= "@color/orange" />
+    <solid android:color= "@color/preview_orange" />
     <size android:width= "35dp"
         android:height= "35dp" />
 </shape>
