--- a/NoteDemo/app/src/main/res/drawable/preview_textview_round_border_down.xml
+++ b/NoteDemo/app/src/main/res/drawable/preview_textview_round_border_down.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- view背景色 -->
-    <solid android:color="@color/white" />
+    <solid android:color="@color/preview_white" />
     <!-- 边框颜色 宽度 -->
     <stroke
         android:width="1dip"
-        android:color="@color/white" />
+        android:color="@color/preview_white" />
     <!-- 边框圆角 -->
     <corners
         android:bottomRightRadius="@dimen/preview_popwindow_item_radius"
