--- a/NoteDemo/app/src/main/res/values/colors.xml
+++ b/NoteDemo/app/src/main/res/values/colors.xml
@@ -3,18 +3,18 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="red">#FF0000</color>
-    <color name="black">#000000</color>
-    <color name="orange">#EE9A00</color>
-    <color name="yellow">#EEEE00</color>
-    <color name="green">#66CD00</color>
-    <color name="white">#FFFFFF</color>
-    <color name="sky_blue">#87CEFF</color>
-    <color name="dark_blue">#3A5FCD</color>
-    <color name="purple">#9b33e4</color>
-    <color name="dark_purple">#4B0082</color>
-    <color name="dark_gray">#424242</color>
+    <color name="preview_red">#FF0000</color>
+    <color name="preview_black">#000000</color>
+    <color name="preview_orange">#EE9A00</color>
+    <color name="preview_yellow">#EEEE00</color>
+    <color name="preview_green">#66CD00</color>
+    <color name="preview_white">#FFFFFF</color>
+    <color name="preview_sky_blue">#87CEFF</color>
+    <color name="preview_dark_blue">#3A5FCD</color>
+    <color name="preview_purple">#9b33e4</color>
+    <color name="preview_dark_purple">#4B0082</color>
+    <color name="preview_dark_gray">#424242</color>
     <color name="preview_bottom_gray">#969696</color>
-    <color name="light_gray">#F8F8F8</color>
+    <color name="preview_light_gray">#F8F8F8</color>
 
 </resources>
