--- a/NoteDemo/app/src/main/res/layout/activity_addwords.xml
+++ b/NoteDemo/app/src/main/res/layout/activity_addwords.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/preview_white"
     tools:context=".MainActivity">
 
     <RelativeLayout
