调整标签大小

--- a/NoteDemo/app/src/main/res/layout/preview_content_webview.xml
+++ b/NoteDemo/app/src/main/res/layout/preview_content_webview.xml
@@ -223,6 +223,7 @@
                 android:layout_height="@dimen/preview_bottom_bar_btn_height"
                 android:progressDrawable="@drawable/preview_seek_bar"
                 android:thumb="@drawable/preview_seek_bar_thumb"
+                android:layout_marginLeft="20dp"
                 android:maxHeight="1dp"
                 android:minHeight="1dp"
                 android:progress="20"/>
