--- a/NoteDemo/app/src/main/res/layout/preview_content_webview.xml
+++ b/NoteDemo/app/src/main/res/layout/preview_content_webview.xml
@@ -206,6 +206,7 @@
                     android:id="@+id/mypostilview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:visibility="invisible"
                     android:background="#00FF0000"/>
         </FrameLayout>
 
