--- a/NoteDemo/app/src/main/res/layout/activity_addwords.xml
+++ b/NoteDemo/app/src/main/res/layout/activity_addwords.xml
@@ -36,5 +36,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:lines="6"
+        android:textColor="@color/preview_black"
         />
 </LinearLayout>
